# opengrep

./: Makefile
.github/actions/install-docker-arm64/: action.yml
.github/workflows/: build-macos-arm64-binary-manual.yml  build-manylinux-binary.yml  build-musllinux-binary.yml  build-test-core-aarch64.yml  build-test-core-x86.yml  build-test-manylinux.yml  rolling-release.yml
libs/commons/tests/: Unit_Pcre2_.ml
libs/lwt_platform/unix/: Lwt_platform.ml
src/configuring/: Engine_config.ml
src/core_cli/: Core_CLI.ml
src/core_scan/: Core_scan.ml
src/engine/: Match_env.ml  Match_taint_spec.ml  Match_tainting_mode.ml
src/main/: Main.ml  dune  flags.sh
src/osemgrep/cli_lsp/: Lsp_subcommand.ml
src/osemgrep/cli_scan/: Scan_CLI.ml
src/osemgrep/core_runner/: Core_runner.ml  Core_runner.mli
src/osemgrep/language_server/notifications/: Notification_handler.ml
src/osemgrep/language_server/requests/: Initialize_request.ml  Request_handler.ml
src/osemgrep/language_server/scan_helpers/: Diagnostics.ml  Diagnostics.mli  Scan_helpers.ml  dune
src/osemgrep/language_server/server/: Session.ml  Session.mli  User_settings.ml  User_settings.mli
src/rml/: Ast_binary_serializer.ml  Taint_json.ml  Taint_location.ml  Taint_processor.ml  Taint_serializer.ml  dune
testlsp/: README.md  test_file.py  test_lsp_versions.py
tools/opengrep-lsp4j-repro/: .gitignore  pom.xml  run-repro.sh
tools/opengrep-lsp4j-repro/src/main/java/com/opengrep/repro/: OpengrepLspRepro.java
